@startuml entity_full

class Entity {
    -worldX: int
    -worldY: int
    -speed: int
    -up1: BufferedImage
    -up2: BufferedImage
    -down1: BufferedImage
    -down2: BufferedImage
    -left1: BufferedImage
    -left2: BufferedImage
    -right1: BufferedImage
    -right2: BufferedImage
    -direction: String
    -spriteCounter: int
    -spriteNum: int
    -solidArea: Rectangle
    -solidAreaDefaultX: int
    -solidAreaDefaultY: int
    -collisionOn: boolean
}

class Player {
  - gp: GamePanel
  - keyH: KeyHandler
  - screenX: int
  - screenY: int
  - solidArea: Rectangle
  - solidAreaDefaultX: int
  - solidAreaDefaultY: int
  - worldX: int
  - worldY: int
  - speed: int
  - direction: String
  - hasKey: String
  - spriteCounter: int
  - spriteNum: int
  - up1: BufferedImage
  - up2: BufferedImage
  - down1: BufferedImage
  - down2: BufferedImage
  - left1: BufferedImage
  - left2: BufferedImage
  - right1: BufferedImage
  - right2: BufferedImage

  + Player(gp: GamePanel, keyH: KeyHandler)
  + setDefaultValues(): void
  + getPlayerImage(): void
  + setup(imageName: String): BufferedImage
  + update(): void
  + pickupObject(i: int): void
  + draw(g2: Graphics2D): void
}

class GamePanel {
  // Assuming GamePanel class exists
}

class KeyHandler {
  // Assuming KeyHandler class exists
}

class UtilityTool {
  // Assuming UtilityTool class exists
}

BufferedImage --|> Object
Player --|> Entity
Player -- GamePanel
Player -- KeyHandler
Player -- UtilityTool

@enduml
